# tsgo-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
cmd/libtsgo/: main.go
rust/: build.rs  msvc_ctors.c
rust/src/: ffi.rs  lib.rs
rust/tests/: integration.rs
